--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ header .flex_container ul li a{
 }
 
 .screen_four{
-    padding: 100px 0;
+    padding: 100px 0 30px;
     background-image: url("../img/about_back.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -304,3 +304,70 @@ header .flex_container ul li a{
     line-height: 24px;
     margin-bottom: 50px;
 }
+
+
+.screen_five {
+    background-image: url("../img/discont_bk.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 30px 0;
+}
+
+.screen_five h2 {
+    text-align: center;
+    font-weight: bold;
+    font-size: 32px;
+    color: white;
+    font-family: Oswald;
+    line-height: 0;
+    margin-bottom: 61px;
+}
+
+.screen_five .flex_container{
+    max-width: 1140px;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+.screen_five .flex_container img {
+    width: 100%;
+    max-width: 540px;
+    margin-bottom: 25px;
+}
+
+.screen_five .flex_container button {
+    font-size: 14px;
+    color: white;
+    text-decoration: none;
+    font-family: Roboto;
+    background-color: #bdaa08;
+    padding: 15px 37px;
+    border-radius: 20px;
+    border: none;
+}
+
+
+.flex_container_button{
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+[id^=radio-] {
+    display: none;
+}
+
+[id^=radio-] + label {
+    display: inline-block;
+    vertical-align: middle;
+    cursor: pointer;
+}
+
+[id^=radio-]:checked + label img {
+    -webkit-box-shadow: 0px 0px 20px 10px rgba(255, 255, 255, 1);
+    -moz-box-shadow: 0px 0px 20px 10px rgba(255, 255, 255, 1);
+    box-shadow: 0px 0px 20px 10px rgba(255, 255, 255, 1);
+    transition: 0.5s;
+}
+
