--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 header{
-    background-color: #9f9a0f;
+    background-color: #bdaa08;
     padding: 20px 30px 0;
     position: absolute;
     max-width: 1140px;
@@ -13,6 +13,7 @@ header{
     margin-left: auto;
     left: 0;
     right: 0;
+    z-index: 5;
 }
 
 
@@ -99,7 +100,7 @@ header .flex_container ul li a:hover{
     margin-bottom: 40px;
 }
 
-.screen_one a{
+.screen_one .anime_botton a{
     font-family: Roboto;
     text-decoration: none;
     color: white;
@@ -107,6 +108,18 @@ header .flex_container ul li a:hover{
     background-color: #bdaa08;
     padding: 25px 63px;
     border-radius: 20px;
+}
+
+.screen_one .anime_botton a:hover{
+    -webkit-box-shadow: 0px 0px 13px 7px rgba(255, 255, 255, 0.42);
+    -moz-box-shadow: 0px 0px 13px 7px rgba(255, 255, 255, 0.42);
+    box-shadow: 0px 0px 13px 7px rgba(255, 255, 255, 0.42);
+    background-color: #8a860b;
+    transition: 0.3s;
+}
+
+.anime_botton:hover{
+    animation-name: headShake;
 }
 
 .solod{
@@ -147,10 +160,12 @@ header .flex_container ul li a:hover{
     font-size: 48px;
     font-weight: bold;
     font-family: Roboto;
+    margin-bottom: 30px;
 }
 
 .balery{
     display: flex;
+    margin-bottom: 30px;
 }
 
 .balery p {
@@ -168,6 +183,7 @@ header .flex_container ul li a:hover{
 
 .hop{
     display: flex;
+    margin-bottom: 30px;
 }
 
 .hop p {
@@ -244,34 +260,42 @@ header .flex_container ul li a:hover{
 
 .beer_two{
     position: absolute;
-    top: -205px;
-    left: 365px;
+    top: -195px;
+    left: 425px;
     z-index: 2;
+    transform: rotate(-7deg);
 }
 
 .beer_three{
     position: absolute;
     top: -151px;
-    left: 310px;
+    left: 355px;
     z-index: 1;
+    transform: rotate(-12deg);
 }
 
 .beer img:hover{
-    width: 103%;
+    width: 105%;
     transition: 0.3s;
+    position: relative;
+    bottom: 5px;
 }
 
 .beer_two img:hover{
     width: 105%;
     transition: 0.3s;
     position: relative;
-    right: 30px;
+    right: 15px;
+    bottom: 10px;
 }
 
 .beer_three img:hover{
-    width: 107%;
+    width: 110%;
     transition: 0.3s;
     position: relative;
+    right: 10px;
+    bottom: 25px;
+
 }
 
 .screen_four{
