--- a/css/style.css
+++ b/css/style.css
@@ -4,28 +4,47 @@
 }
 
 header{
-    background-color: #bdaa08;
     padding: 20px 30px 0;
-    position: absolute;
     max-width: 1140px;
     width: 100%;
     margin-right: auto;
     margin-left: auto;
+    position: fixed;
+    top: 0;
     left: 0;
     right: 0;
-    z-index: 5;
+    z-index: 15;
 }
 
+header:before{
+    content: "";
+    background-color: #bdaa08;
+    padding: 0 30px 0;
+    max-width: 1140px;
+    width: 100%;
+    height: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+}
 
-.flex_container{
+.header_burger{
+    display: none;
+}
+
+.header_body{
+    position: relative;
     display: flex;
     justify-content: space-between;
 }
 
-header .flex_container ul{
+header .header_menu ul{
     display: flex;
     justify-content: space-between;
-
 }
 
 .logo{
@@ -33,12 +52,16 @@ header .flex_container ul{
     color: black;
     font-family: Roboto;
     text-decoration: none;
+    position: relative;
+    z-index: 3;
 }
 
 header .flex_container ul li{
     list-style: none;
     font-family: Roboto;
     font-size: 14px;
+    position: relative;
+    z-index: 3;
 }
 
 header .flex_container ul li:after{
@@ -48,6 +71,81 @@ header .flex_container ul li:after{
     height: 2px;
     margin-top: 20px;
 }
+
+@media (max-width: 767px) {
+    body.lock{
+        overflow: hidden;
+    }
+    .header_burger{
+        display: block;
+        position: relative;
+        width: 30px;
+        height: 20px;
+        right: 50px;
+        top: -9px;
+        z-index: 5;
+        padding: 8px 10px;
+    }
+
+    .header_burger span{
+        background-color: white;
+        position: absolute;
+        width: 30px;
+        height: 2px;
+        left: 0;
+        top: 9px;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .header_burger span:nth-last-child(3){
+        top: 5px;
+        margin-top: 2px;
+    }
+    .header_burger span:nth-last-child(2){
+        top: 28px;
+    }
+
+    .header_burger span:nth-last-child(1){
+        top: 18px;
+    }
+
+
+
+
+    .header_burger.active{
+        background-color: #8a860b;
+        transition: 0.3s;
+    }
+
+    .header_menu{
+        position: fixed;
+        top: -107%;
+        overflow: auto;
+        transition: 0.3s;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #8a860b;
+        padding-top: 75px;
+    }
+    .header_menu.active{
+        top: 0;
+    }
+    header .header_menu ul{
+        display: block;
+        text-align: start;
+        padding: 10px;
+    }
+    header .flex_container ul li{
+        margin-bottom: 30px;
+    }
+}
+
+
+
+
 
 header .flex_container ul li:hover:after{
     background-color: black;
@@ -439,6 +537,7 @@ header .flex_container ul li a:hover{
     background-repeat: repeat-y;
     background-size: contain;
     width: 100%;
+    position: relative;
 }
 
 .reviews_content{
@@ -603,4 +702,27 @@ footer .facebook {
     text-align: center;
     line-height: 45px;
     vertical-align: center;
+}
+
+.owl-dots{
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 20px;
+}
+
+.owl-dot span {
+    display: inline-block;
+    margin-left: 30px;
+    width: 10px;
+    height: 10px;
+    background: none;
+    border: solid 1px white;
+    border-radius: 50%;
+}
+
+.owl-dot.active span{
+    width: 15px;
+    height: 15px;
+    background-color: white;
 }
