--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 
 header{
-    padding: 20px 30px 0;
+    padding: 20px 0 0;
     max-width: 1140px;
     width: 100%;
     margin-right: auto;
@@ -19,7 +19,6 @@ header{
 header:before{
     content: "";
     background-color: #bdaa08;
-    padding: 0 30px 0;
     max-width: 1140px;
     width: 100%;
     height: 100%;
@@ -45,6 +44,7 @@ header:before{
 header .header_menu ul{
     display: flex;
     justify-content: space-between;
+    padding-right: 30px;
 }
 
 .logo{
@@ -54,6 +54,7 @@ header .header_menu ul{
     text-decoration: none;
     position: relative;
     z-index: 3;
+    padding-left: 30px;
 }
 
 header .flex_container ul li{
@@ -81,7 +82,7 @@ header .flex_container ul li:after{
         position: relative;
         width: 30px;
         height: 20px;
-        right: 50px;
+        right: 20px;
         top: -9px;
         z-index: 5;
         padding: 8px 10px;
@@ -171,13 +172,14 @@ header .flex_container ul li a:hover{
     background-image: url("../img/screen_one.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-
-    padding: 200px 88px 100px;
+    padding: 200px 10px 100px;
 }
 
 .screen_one .flex_container{
     display: flex;
     justify-content: space-between;
+    max-width: 1140px;
+    margin: auto;
     position: relative;
 }
 
