--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,41 @@
+@media (max-width: 992px){
+    .beer_position{
+        position: relative;
+        right: 300px;
+    }
+    .contant form{
+        display: block;
+    }
+    .button_coment{
+        justify-content: start;
+    }
+}
+
 @media (max-width: 921px){
     .solod{
+        display: none;
+    }
+    .beer_position{
+        display: none;
+    }
+    .screen_four .flex_container{
+        display: block;
+    }
+    .screen_four .flex_container img{
+        width: 100%;
+    }
+    .reviews_content{
+        display: block;
+        padding: 40px 20px;
+    }
+    .reviews_carusel h4{
+        margin-bottom: 20px;
+    }
+    .coments p{
+        max-width: 400px;
+        width: 100%;
+    }
+    .screen_three_content_two{
         display: none;
     }
 }
@@ -18,6 +54,7 @@
 
 
 @media (max-width: 767px){
+
     .screen_two_content{
         padding: 75px 30px 100px;
     }
@@ -29,11 +66,27 @@
         width: 40%;
         height: 100%;
     }
+    .coments_user textarea{
+        width: 400px;
+    }
 }
 
 @media (max-width: 540px){
     .screen_two_content{
         padding: 75px 10px 100px;
+    }
+    .screen_five .flex_container{
+        display: block;
+    }
+
+    .screen_five .flex_container .stock{
+        margin-right: 0;
+    }
+    .screen_five .flex_container .stock_two{
+        margin-left: 0;
+    }
+    .coments_user textarea{
+        width: 350px;
     }
 }
 
@@ -46,7 +99,6 @@
         height: 100%;
     }
 
-
     .balery p{
         font-size: 14px;
         line-height: 24px;
@@ -54,6 +106,25 @@
     .hop p{
         font-size: 14px;
         line-height: 24px;
+    }
+    .screen_one{
+        padding: 150px 10px 150px;
+    }
+    .beer_one img{
+        position: relative;
+        top: 70px;
+    }
+    .screen_one .anime_botton a{
+        padding: 20px 40px;
+        font-size: 12px;
+    }
+
+    .contant form input{
+        width: 285px;
+    }
+
+    .coments_user textarea{
+        width: 285px;
     }
 }
 
@@ -73,19 +144,6 @@
     }
 }
 
-@media (max-width: 411px){
-    .screen_one{
-        padding: 150px 10px 150px;
-    }
-    .beer_one img{
-        position: relative;
-        top: 70px;
-    }
-    .screen_one .anime_botton a{
-        padding: 20px 40px;
-        font-size: 12px;
-    }
-}
 
 
 
