--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,29 @@ header .flex_container ul li:after{
     margin-top: 20px;
 }
 
+
+
+header .flex_container ul li:hover:after{
+    background-color: black;
+    transition: 0.5s;
+}
+
+header .flex_container ul li a{
+    text-decoration: none;
+    color: black;
+    background-color: transparent;
+    padding: 20px 15px 20px;
+    width: 100%;
+    text-align: center;
+}
+
+header .flex_container ul li a:hover{
+    color: white;
+    background-color: #8a860b;
+    transition: 0.5s;
+}
+
+
 @media (max-width: 767px) {
     body.lock{
         overflow: hidden;
@@ -128,7 +151,7 @@ header .flex_container ul li:after{
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: #8a860b;
+        background-color: #af9d08;
         padding-top: 75px;
     }
     .header_menu.active{
@@ -140,33 +163,24 @@ header .flex_container ul li:after{
         padding: 10px;
     }
     header .flex_container ul li{
+        background-color: transparent;
+        padding-top: 20px;
         margin-bottom: 30px;
+    }
+    header .flex_container ul li a{
+        text-align: start;
+    }
+
+    header .flex_container ul li:hover{
+        background-color: #8a860b;
+        padding-top: 20px;
+        transition: 0.3s;
     }
 }
 
 
 
 
-
-header .flex_container ul li:hover:after{
-    background-color: black;
-    transition: 0.5s;
-}
-
-header .flex_container ul li a{
-    text-decoration: none;
-    color: black;
-    background-color: transparent;
-    padding: 20px 15px 20px;
-    width: 100%;
-    text-align: center;
-}
-
-header .flex_container ul li a:hover{
-    color: white;
-    background-color: #8a860b;
-    transition: 0.5s;
-}
 
 .screen_one{
     background-image: url("../img/screen_one.jpg");
