--- a/css/style.css
+++ b/css/style.css
@@ -596,7 +596,7 @@ header .flex_container ul li a:hover{
     font-size: 24px;
     font-family: Roboto;
     font-weight: bold;
-    color: black;
+    color: white;
     margin-right: 90px;
 }
 
@@ -604,7 +604,7 @@ header .flex_container ul li a:hover{
     font-size: 18px;
     font-weight: bold;
     font-family: Roboto;
-    color: black;
+    color: white;
 }
 
 
